updated: - some UI tweaks; - other changes according this tweaks;

--- a/WSUI.Module/View/AttachmentSettingsView.xaml
+++ b/WSUI.Module/View/AttachmentSettingsView.xaml
@@ -7,6 +7,13 @@
              xmlns:Service="clr-namespace:WSUI.Module.Service"
              mc:Ignorable="d" 
              >
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Grid Margin="0 5 0 5"  Focusable="False">
         <Grid>
             <Grid.ColumnDefinitions>
@@ -16,12 +23,15 @@
             <TextBox Text="{Binding Path=SearchString,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"  
                 Controls:TextboxHelper.Watermark="Enter Search Criteria"
                 Controls:TextboxHelper.ClearTextButton="True"
+                     Style="{DynamicResource SearchMetroTextBox}"
+                VerticalAlignment="Center"    
+                VerticalContentAlignment="Center"
                 Service:KeyDownBehavior.KeyDown="{Binding KeyDownCommand}" 
                     Grid.Column="0" MinHeight="32"
                         IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}"/>
-            <Button Command="{Binding Path=SearchCommand}" Content="Search" 
+            <!--<Button Command="{Binding Path=SearchCommand}" Content="Search" 
                 Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Top" MinHeight="32"
-                    IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}"/>
+                    IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}"/>-->
         </Grid>
     </Grid>
 </UserControl>
