--- a/WSUI.Control/WSMainControl.xaml
+++ b/WSUI.Control/WSMainControl.xaml
@@ -34,7 +34,7 @@
                   
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="0.2*" />
+                    <ColumnDefinition Width="200" />
                     <ColumnDefinition Width="0.5*" />
                     <ColumnDefinition Width="2" />
                     <ColumnDefinition Width="0.5*" />
