--- a/WSUI.Module/View/KindsView.xaml
+++ b/WSUI.Module/View/KindsView.xaml
@@ -9,86 +9,8 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colours.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
-
+                <ResourceDictionary Source="../Service/ResourceTemplate.xaml" />
             </ResourceDictionary.MergedDictionaries>
-
-            <Color x:Key="HighLightColorItem" >#FFF4F4F4</Color>
-            
-            <Style x:Key="ItemTextBlock" TargetType="TextBlock">
-                <Setter Property="FontFamily" Value="{StaticResource DefaultFont}"></Setter>
-                <Setter Property="FontSize" Value="{StaticResource NormalFontSize}"></Setter>
-                <Setter Property="Margin" Value="14 0 0 0"></Setter>
-            </Style>
-            
-            
-            <Style x:Key="KindsListBoxItem" TargetType="{x:Type ListBoxItem}">
-                <Setter Property="MinHeight" Value="32" />
-                <Setter Property="Margin" Value="0 2 0 0" />
-                <!--<Setter Property="IsSelected" Value="{Binding Toggle, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>-->
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="{x:Type ListBoxItem}">
-
-                            <Grid x:Name="Border">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto"></ColumnDefinition>
-                                    <ColumnDefinition Width="*"></ColumnDefinition>
-                                </Grid.ColumnDefinitions>
-                                <Image Source="{Binding Path=Icon}" Width="32" Height="32" MaxHeight="32" MaxWidth="32" />    
-                                <TextBlock Grid.Column="1" x:Name="KindName" Text="{Binding Path=UIName}" 
-                                           VerticalAlignment="Center" Style="{StaticResource ItemTextBlock}"></TextBlock>
-                                
-                            </Grid>
-                            <ControlTemplate.Triggers>
-                                <Trigger Property="IsSelected" Value="True">
-                                    <Setter TargetName="Border" Property="Background" Value="{DynamicResource AccentColorBrush}" />
-                                    <Setter Property="Foreground" Value="{DynamicResource AccentSelectedColorBrush}" />
-                                </Trigger>
-                                <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter TargetName="Border" Property="Background">
-                                        <Setter.Value>
-                                            <SolidColorBrush Color="{DynamicResource HighLightColorItem}" />
-                                        </Setter.Value>
-                                    </Setter>
-                                </Trigger>
-                                <Trigger Property="IsEnabled" Value="False">
-                                    <Setter Property="Foreground" Value="{DynamicResource GrayBrush5}" />
-                                </Trigger>
-                                <MultiTrigger>
-                                    <MultiTrigger.Conditions>
-                                        <Condition Property="IsEnabled" Value="False" />
-                                        <Condition Property="IsSelected" Value="True" />
-                                    </MultiTrigger.Conditions>
-                                    <MultiTrigger.Setters>
-                                        <Setter TargetName="Border" Property="Background" Value="{DynamicResource GrayBrush5}" />
-                                        <Setter Property="Foreground" Value="{DynamicResource AccentSelectedColorBrush}" />
-                                    </MultiTrigger.Setters>
-                                </MultiTrigger>
-                                <MultiTrigger>
-                                    <MultiTrigger.Conditions>
-                                        <Condition Property="IsSelected" Value="True" />
-                                        <Condition Property="Selector.IsSelectionActive" Value="True" />
-                                    </MultiTrigger.Conditions>
-                                    <Setter TargetName="Border" Property="Background">
-                                        <Setter.Value>
-                                            <SolidColorBrush Color="{DynamicResource AccentColor2}" />
-                                        </Setter.Value>
-                                    </Setter>
-                                </MultiTrigger>
-                            </ControlTemplate.Triggers>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
-
-
-
-
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
@@ -99,7 +21,7 @@
         
         <ListBox Grid.Row="1" Style="{StaticResource MetroListBox}" ItemsSource="{Binding KindsCollection}" Height="Auto"
                     SelectedItem="{Binding SelectedLazyKind,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
-                    ItemContainerStyle="{StaticResource KindsListBoxItem}"
+                    ItemContainerStyle="{StaticResource WSUIMetroListBoxItem}"
                     ScrollViewer.VerticalScrollBarVisibility="Auto" 
                     ScrollViewer.HorizontalScrollBarVisibility="Auto">
         </ListBox>
