--- a/WSUI.Module/View/ContactDataView.xaml
+++ b/WSUI.Module/View/ContactDataView.xaml
@@ -70,52 +70,6 @@
 
         </ResourceDictionary>
     </UserControl.Resources>
-    <!--<Expander Header="{Binding Path=Contact.Name,UpdateSourceTrigger=PropertyChanged}" 
-                Style="{StaticResource ResourceKey=ExpanderStyleMetro}"  Visibility="{Binding Visible,UpdateSourceTrigger=PropertyChanged}">
-            <Grid IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}" Focusable="False">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="0.60*"/>
-                    <ColumnDefinition Width="0.40*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="0.25*"/>
-                    <RowDefinition Height="0.25*"/>
-                </Grid.RowDefinitions>
-                <Image Grid.Row="0" Grid.Column="0" Source="{Binding Contact.Foto,UpdateSourceTrigger=PropertyChanged}" Margin="1"/>
-                <StackPanel Grid.Row="0" Grid.Column="1"  Orientation="Vertical" Margin="5">
-                    <ItemsControl ItemsSource="{Binding Path=Contact.EmailList,UpdateSourceTrigger=PropertyChanged}">
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <TextBlock><Hyperlink Command="{Binding Path=DataContext.EmailClickCommand,ElementName=this}" CommandParameter="{Binding}" >
-                                <TextBlock Text="{Binding}"/>                        
-                            </Hyperlink>
-                        </TextBlock>
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0"  Grid.ColumnSpan="2" Margin="4">
-                    <TextBlock Text="Contact name:"  FontWeight="Bold" Margin="4"/>
-                    <TextBlock Text="{Binding Path=Contact.Name,UpdateSourceTrigger=PropertyChanged}" Margin="4" 
-                       Foreground="Blue"/>
-                </StackPanel>
-
-
-
-            <StackPanel Orientation="Vertical"  Grid.Row="2" Grid.Column="0"  Grid.ColumnSpan="2" >
-                <ListBox ItemsSource="{Binding DataSource,UpdateSourceTrigger=PropertyChanged}"
-                          ItemTemplateSelector="{StaticResource templateSelector}"
-                          SelectedItem="{Binding Path=Current,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
-                          >
-
-
-                </ListBox>
-            </StackPanel>
-            </Grid>
-        </Expander>-->
     <Grid>
         <ListBox x:Name="listBox" ItemsSource="{Binding Path=DataSource,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                  ItemTemplateSelector="{StaticResource contactTemplateSelector}"
@@ -123,6 +77,7 @@
                  IsEnabled="{Binding Enabled,UpdateSourceTrigger=PropertyChanged}"
                  ScrollViewer.ScrollChanged="ListBox_ScrollChanged_1"
                  service:DoubleClickBehabior.DoubleClickHandler="{Binding DoubleClickCommand}"
+                 HorizontalContentAlignment="Stretch"
                  >
 
         </ListBox>
