--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -1,4 +1,4 @@
-﻿<ResourceDictionary x:Class="WSUI.Module.Service.ResourceTemplate"
+﻿<ResourceDictionary 
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -547,60 +547,13 @@
     </Style>
 
 
-    <SolidColorBrush x:Key="HighLightColorItemBrush" Color="{StaticResource HighLightColorItem}"></SolidColorBrush>
+    <!--<SolidColorBrush x:Key="HighLightColorItemBrush" Color="{StaticResource HighLightColorItem}"></SolidColorBrush>
     <SolidColorBrush x:Key="AccentColor2Brush" Color="{StaticResource AccentColor2}"></SolidColorBrush>
     <SolidColorBrush x:Key="HoverForegroundColorBrush" Color="{StaticResource HoverForegroundColor}"></SolidColorBrush>
     <SolidColorBrush x:Key="AccentColorBrush" Color="{StaticResource AccentColor}" />
-    <SolidColorBrush x:Key="AccentDarkColorBrush" Color="{StaticResource AccentDarkColor}" />
+    <SolidColorBrush x:Key="AccentDarkColorBrush" Color="{StaticResource AccentDarkColor}" />-->
     
     
-    <Style x:Key="SearchButton" TargetType="Button">
-        <Setter Property="Visibility" Value="Visible"/>
-        <Setter Property="Foreground" Value="{StaticResource AccentSelectedColorBrush}"/>
-        <Setter Property="Background" Value="{StaticResource AccentColor2Brush}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource AccentColor2Brush}"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="Button">
-                    <Border SnapsToDevicePixels="True"
-				            BorderThickness="1"
-				            BorderBrush="{TemplateBinding BorderBrush}" 
-				            Background="{TemplateBinding Background}">
-                        <Grid>
-                            <Viewbox>
-                                <Grid>
-                                    <Grid Name="backgroundGrid" Width="32" Height="32" Visibility="Collapsed" />
-                                    <Path Data="F1M-185.925,-2026.96L-203.062,-2048.74C-197.485,-2056.51 -197.433,-2067.31 -203.64,-2075.2 -211.167,-2084.76 -225.019,-2086.42 -234.588,-2078.89 -244.154,-2071.36 -245.808,-2057.51 -238.282,-2047.94 -231.986,-2039.95 -221.274,-2037.5 -212.337,-2041.31L-195.262,-2019.61 -185.925,-2026.96z M-231.201,-2053.51C-235.653,-2059.17 -234.674,-2067.36 -229.02,-2071.81 -223.36,-2076.26 -215.169,-2075.29 -210.721,-2069.63 -206.269,-2063.97 -207.245,-2055.78 -212.902,-2051.33 -218.559,-2046.88 -226.752,-2047.86 -231.201,-2053.51z" Stretch="Uniform" Fill="#FFFFFFFF" Width="24" Height="24" Margin="0,0,0,0" RenderTransformOrigin="0.5,0.5">
-                                        <Path.RenderTransform>
-                                            <TransformGroup>
-                                                <TransformGroup.Children>
-                                                    <RotateTransform Angle="0" />
-                                                    <ScaleTransform ScaleX="0.75" ScaleY="0.75" />
-                                                </TransformGroup.Children>
-                                            </TransformGroup>
-                                        </Path.RenderTransform>
-                                    </Path>
-                                </Grid>
-                            </Viewbox>
-                        </Grid>
-                    </Border>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="BorderBrush" Value="{StaticResource AccentColorBrush}" />
-                            <Setter Property="Background" Value="{StaticResource AccentColorBrush}" />
-                        </Trigger>
-                        <Trigger Property="IsPressed" Value="True">
-                            <Setter Property="Background" Value="{StaticResource AccentDarkColorBrush}"/>
-                            <Setter Property="BorderBrush" Value="{StaticResource AccentDarkColorBrush}"/>
-                        </Trigger>
-                        <Trigger Property="IsEnabled" Value="False">
-                            <Setter Property="Background" Value="{DynamicResource GrayBrush5}" />
-                            <Setter Property="BorderBrush" Value="{DynamicResource GrayBrush5}" />
-                        </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
+    
     
 </ResourceDictionary>
