--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -171,6 +171,7 @@
     <DataTemplate x:Key="EmailItemTemplate">
         <Grid HorizontalAlignment="Left" Margin="8 0 0 0" Width="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBox}},Path=ActualWidth,Converter={StaticResource ActualWidthConverter}}">
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="35"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Style="{StaticResource ResourceKey=CountStyleWidthColumn}"/>
                 <ColumnDefinition Width="0.25*"/>
@@ -183,17 +184,17 @@
                 </StackPanel>
             </Grid.ToolTip>
             
-            <Image Grid.Column="0" Source="..\Images\mail.png" Style="{StaticResource ImageStyle}" />
+            <Image Grid.Column="1" Source="..\Images\mail.png" Style="{StaticResource ImageStyle}" />
 
             <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="0 3 0 3"
-                           Grid.Column="1"></TextBlock>
+                           Grid.Column="2"></TextBlock>
             <ctrl:HightliteTextBlock Text="{Binding Path=Recepient}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"
-                                            Grid.Column="2"  Margin="5" ></ctrl:HightliteTextBlock>
+                                            Grid.Column="3"  Margin="5" ></ctrl:HightliteTextBlock>
 
             <ctrl:HightliteTextBlock Text="{Binding Path=ItemName,Converter={StaticResource ResourceKey=StringConverter}}"  Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"
-                                            Grid.Column="3"   Margin="5"></ctrl:HightliteTextBlock>
+                                            Grid.Column="4"   Margin="5"></ctrl:HightliteTextBlock>
 
-            <TextBlock Grid.Column="4"  Text="{Binding Path=DateReceived,Converter={StaticResource dateConverter}}"  Margin="5 5 1 5" Foreground="Black"/>
+            <TextBlock Grid.Column="5"  Text="{Binding Path=DateReceived,Converter={StaticResource dateConverter}}"  Margin="5 5 1 5" Foreground="Black"/>
         </Grid>
 
     </DataTemplate>
